refactor server cli code, add more cli options & version command (closes #51, #144, #1090, #1195) (#1200)

--- a/server/graphql-engine.cabal
+++ b/server/graphql-engine.cabal
@@ -131,6 +131,9 @@ library
                      -- regex related
                      , regex-tdfa >= 1.2
 
+                     -- pretty printer
+                     , ansi-wl-pprint
+
   exposed-modules:     Hasura.Server.App
                      , Hasura.Server.Auth
                      , Hasura.Server.Auth.JWT
