--- a/server/tests-py/queries/graphql_mutation/insert/nested/author_with_articles_author_id_fail.yaml
+++ b/server/tests-py/queries/graphql_mutation/insert/nested/author_with_articles_author_id_fail.yaml
@@ -6,7 +6,7 @@ response:
   - extensions:
       code: validation-failed
       path: $.selectionSet.insert_author.args.objects[0].articles.data[0]
-    message: cannot insert author_id columns as their values are already being determined by parent insert
+    message: "cannot insert \"author_id\" columns as their values are already being determined by parent insert"
 query:
   query: |
    mutation nested_author_insert {
