--- a/console/package.json
+++ b/console/package.json
@@ -96,7 +96,7 @@
     "semver": "5.5.1",
     "subscriptions-transport-ws": "^0.9.12",
     "uuid": "^3.0.1",
-    "valid-url": "^1.0.9"
+    "valid-url": "^1.0.9",
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
