--- a/console/package.json
+++ b/console/package.json
@@ -63,6 +63,7 @@
     "history": "^3.0.0",
     "hoist-non-react-statics": "^1.0.3",
     "invariant": "^2.2.0",
+    "is-valid-json": "^1.0.2",
     "isomorphic-fetch": "^2.2.1",
     "less": "^3.7.1",
     "lru-memoize": "^1.0.0",
@@ -96,7 +97,7 @@
     "semver": "5.5.1",
     "subscriptions-transport-ws": "^0.9.12",
     "uuid": "^3.0.1",
-    "valid-url": "^1.0.9",
+    "valid-url": "^1.0.9"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
