added update-cli command, close #1239

--- a/cli/Gopkg.toml
+++ b/cli/Gopkg.toml
@@ -91,3 +91,7 @@
 [[constraint]]
   branch = "master"
   name = "github.com/oliveagle/jsonpath"
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/kardianos/osext"
