console now works on local builds of the server
1. local console assets can be served at /static/ by a build time flag
'local-console'. This can be set with stack as follows:
   `stack build --flag graphql-engine:local-console`
2. the --root-dir option is removed which was used as a temporary hack
for serving graphiql

--- a/server/graphql-engine.cabal
+++ b/server/graphql-engine.cabal
@@ -22,6 +22,11 @@ flag developer
   default: False
   manual: True
 
+flag local-console
+  description: embeds resources needed by console and serves them at /static/
+  default: False
+  manual: True
+
 library
   hs-source-dirs:      src-lib
                      , src-exec
@@ -82,7 +87,6 @@ library
 
                      -- GraphQL related
                      , graphql-parser
-                     , wai-middleware-static
 
                      -- URL parser related
                      , network-uri
@@ -255,6 +259,8 @@ library
 
   if flag(developer)
     ghc-prof-options: -rtsopts -fprof-auto -fno-prof-count-entries
+  if flag(local-console)
+    cpp-options: -DLocalConsole
 
   ghc-options: -O2
                -Wall
