Add test for query/mutation/subscription on realtime chat

--- a/community/examples/realtime-chat/package.json
+++ b/community/examples/realtime-chat/package.json
@@ -22,12 +22,14 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "test": "npm run prepare-schema && react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "prepare-schema": "npx get-graphql-schema https://realtime-chat.demo.hasura.app/v1alpha1/graphql > schema.graphql"
   },
   "devDependencies": {
-    "eslint-plugin-graphql": "^1.5.0",
+    "easygraphql-tester": "^3.0.1",
     "eslint": "^5.1.0",
+    "eslint-plugin-graphql": "^1.5.0",
     "eslint-plugin-react": "^7.10.0"
   }
 }
