change boilerplates for zeit

--- a/community/boilerplates/remote-schemas/zeit-now/nodejs/express-graphqljs-sequelize/package.json
+++ b/community/boilerplates/remote-schemas/zeit-now/nodejs/express-graphqljs-sequelize/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "express": "^4.16.4",
     "express-graphql": "^0.7.1",
-    "graphql": "^14.0.2"
+    "graphql": "^14.0.2",
+    "pg": "^7.7.1",
+    "sequelize": "^4.42.0"
   },
   "devDependencies": {
     "esm": "^3.0.84"
