--- a/server/graphql-engine.cabal
+++ b/server/graphql-engine.cabal
@@ -137,8 +137,13 @@ library
 
                      -- pretty printer
                      , ansi-wl-pprint
+                     , binary
 
-  exposed-modules:     Hasura.Server.App
+  exposed-modules:     Hasura.Prelude
+                     , Hasura.Logging
+                     , Hasura.EncJSON
+
+                     , Hasura.Server.App
                      , Hasura.Server.Auth
                      , Hasura.Server.Auth.JWT
                      , Hasura.Server.Init
@@ -228,8 +233,6 @@ library
                      , Hasura.SQL.GeoJSON
                      , Hasura.SQL.Time
                      , Hasura.SQL.Rewrite
-                     , Hasura.Prelude
-                     , Hasura.Logging
                      , Network.URI.Extended
                      , Ops
 
