--- a/community/learn/graphql-tutorials/manifests/ingress-resource.yaml
+++ b/community/learn/graphql-tutorials/manifests/ingress-resource.yaml
@@ -3,7 +3,7 @@ kind: Ingress
 metadata:
   name: ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   rules:
   - host: graphql-tutorials.org
@@ -13,7 +13,7 @@ spec:
         backend:
           serviceName: homepage
           servicePort: 80
-      - path: /react-apollo
+      - path: /(react-apollo/?.*)
         backend:
           serviceName: react-apollo
           servicePort: 80
