--- a/community/learn/graphql-tutorials/manifests/ingress-resource.yaml
+++ b/community/learn/graphql-tutorials/manifests/ingress-resource.yaml
@@ -2,8 +2,8 @@ apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
   name: ingress
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$1
+  #  annotations:
+  #    nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   rules:
   - host: graphql-tutorials.org
@@ -13,7 +13,7 @@ spec:
         backend:
           serviceName: homepage
           servicePort: 80
-      - path: /(react-apollo/?.*)
+      - path: /react-apollo
         backend:
           serviceName: react-apollo
           servicePort: 80
