upgrade to zeit-now 2.0

--- a/community/boilerplates/event-triggers/zeit-now/go/echo/now.json
+++ b/community/boilerplates/event-triggers/zeit-now/go/echo/now.json
@@ -1,6 +1,5 @@
 {
-  "name": "zeit-echo",
-  "features": {
-    "cloud": "v2"
-  }
+  "project": "zeit-echo",
+  "version": 2,
+  "builds": [{ "src": "*.go", "use": "@now/go" }]
 }
