update docs, type descriptions and remove _st_contains_in, _st_disjoin

--- a/server/tests-py/queries/graphql_query/boolexp/postgis/query_using_line.yaml
+++ b/server/tests-py/queries/graphql_query/boolexp/postgis/query_using_line.yaml
@@ -91,12 +91,7 @@ query:
         type
         geom_col
       }
-      st_crosses: geom_table(where: {geom_col: {_st_crosses: $line}}){
-        id
-        type
-        geom_col
-      }
-      st_disjoint: geom_table(where: {geom_col: {_st_disjoint: $line}}){
+      st_disjoint: geom_table(where: {_not: {geom_col: {_st_intersects: $line}}}){
         id
         type
         geom_col
