--- a/server/tests-py/queries/v1/select/permissions/teardown.yaml
+++ b/server/tests-py/queries/v1/select/permissions/teardown.yaml
@@ -1,14 +1,10 @@
 type: bulk
 args:
-
 - type: run_sql
   args:
     sql: |
-      drop table article
-    cascade: true
-
-- type: run_sql
-  args:
-    sql: |
-      drop table author
+      DROP TABLE article;
+      DROP TABLE author;
+      DROP TABLE geom_table;
+      DROP TABLE jsonb_table;
     cascade: true
