--- a/server/tests-py/queries/graphql_mutation/update/permissions/teardown.yaml
+++ b/server/tests-py/queries/graphql_mutation/update/permissions/teardown.yaml
@@ -11,14 +11,7 @@ args:
 - type: run_sql
   args:
     sql: |
-      drop table article
-
-- type: run_sql
-  args:
-    sql: |
-      drop table author
-
-- type: run_sql
-  args:
-    sql: |
-      drop table person
+      DROP TABLE article;
+      DROP TABLE author;
+      DROP TABLE person;
+      DROP TABLE resident;
