add anonymous telemetry (#1401)

--- a/server/src-rsr/hdb_metadata.yaml
+++ b/server/src-rsr/hdb_metadata.yaml
@@ -260,6 +260,11 @@ args:
     schema: hdb_catalog
     name: remote_schemas
 
+- type: track_table
+  args:
+    schema: hdb_catalog
+    name: hdb_version
+
 - type: create_object_relationship
   args:
     name: return_table_info
