--- a/install-manifests/docker-compose/docker-compose.yaml
+++ b/install-manifests/docker-compose/docker-compose.yaml
@@ -15,7 +15,7 @@ services:
     environment:
       HASURA_GRAPHQL_DATABASE_URL: postgres://postgres:@postgres:5432/postgres
       HASURA_GRAPHQL_ENABLE_CONSOLE: "true" # set to "false" to disable console
-      ## uncomment next line to set an access key
-      # HASURA_GRAPHQL_ACCESS_KEY: mysecretaccesskey
+      ## uncomment next line to set an admin secret
+      # HASURA_GRAPHQL_ADMIN_SECRET: myadminsecretkey
 volumes:
   db_data:
