add support for multiple domains in cors

--- a/server/graphql-engine.cabal
+++ b/server/graphql-engine.cabal
@@ -146,6 +146,7 @@ library
                      , Hasura.Server.Logging
                      , Hasura.Server.Query
                      , Hasura.Server.Utils
+                     , Hasura.Server.Cors
                      , Hasura.Server.Version
                      , Hasura.Server.CheckUpdates
                      , Hasura.Server.Telemetry
