add update-cli command

--- a/cli/Makefile
+++ b/cli/Makefile
@@ -1,6 +1,7 @@
 PWD := $(shell pwd)
 PARENT_DIR := $(shell dirname $(PWD))
 VERSION ?= $(shell ../scripts/get-version.sh)
+OS ?= linux darwin windows
 OUTPUT_DIR := _output
 
 # compile assets
@@ -32,7 +33,7 @@ build: export CGO_ENABLED=0
 build:
 	gox -ldflags '-X github.com/hasura/graphql-engine/cli/version.BuildVersion=$(VERSION) -s -w -extldflags "-static"' \
 	-rebuild \
-	-os="linux darwin windows" \
+	-os="$(OS)" \
 	-arch="amd64" \
 	-output="$(OUTPUT_DIR)/$(VERSION)/cli-hasura-{{.OS}}-{{.Arch}}" \
 	./cmd/hasura/
