--- a/server/tests-py/queries/v1/relationships/object_relationship_foreign_key.yaml
+++ b/server/tests-py/queries/v1/relationships/object_relationship_foreign_key.yaml
@@ -47,6 +47,55 @@
           - id
           - name 
 
+  #Rename object relationship
+- description: Rename object relationship author to author_obj
+  url: /v1/query
+  status: 200
+  response:
+    message: success
+  query:
+    type: rename_relationship
+    args:
+      table: article
+      name: author
+      new_name: author_obj
+
+  #Select Query
+
+- description: Nested select on article with renamed object relation
+  url: /v1/query
+  status: 200
+  response:
+    - id: 1
+      title: Article 1
+      content: Sample article content 1
+      author_obj:
+        id: 1
+        name: Author 1
+    - id: 2
+      title: Article 2
+      content: Sample article content 2
+      author_obj:
+        id: 1
+        name: Author 1
+    - id: 3
+      title: Article 3
+      content: Sample article content 3
+      author_obj:
+        id: 2
+        name: Author 2
+  query:
+    type: select
+    args:
+      table: article
+      columns:
+        - id
+        - title
+        - content
+        - name: author_obj
+          columns:
+          - id
+          - name 
 
   #Drop object relationship
 - description: Drop object relationship
@@ -60,4 +109,4 @@
     type: drop_relationship
     args:
       table: article
-      relationship: author
+      relationship: author_obj
