store artifacts to see log, change admin_secret to acces_key

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -241,6 +241,9 @@ jobs:
     - run:
         name: test cli
         command: .circleci/test-cli-with-last-release.sh
+    - store_artifacts:
+        path: /build/_console_output
+        destination: console
 
   # test and build cli
   test_and_build_cli:
