manage schema cache when horizontally scaled, closes #1182

--- a/server/graphql-engine.cabal
+++ b/server/graphql-engine.cabal
@@ -149,6 +149,7 @@ library
                      , Hasura.Server.Version
                      , Hasura.Server.CheckUpdates
                      , Hasura.Server.Telemetry
+                     , Hasura.Server.CacheUpdate
                      , Hasura.RQL.Types
                      , Hasura.RQL.Instances
                      , Hasura.RQL.Types.SchemaCache
@@ -316,6 +317,7 @@ executable graphql-engine
                      , wreq
                      , connection
                      , string-conversions
+                     , uuid
 
   other-modules:     Ops
 
