--- a/server/tests-py/queries/graphql_mutation/insert/basic/teardown.yaml
+++ b/server/tests-py/queries/graphql_mutation/insert/basic/teardown.yaml
@@ -11,34 +11,12 @@ args:
 - type: run_sql
   args:
     sql: |
-      drop table person
-
-- type: run_sql
-  args:
-    sql: |
-      drop table orders
-
-- type: run_sql
-  args:
-    sql: |
-      drop table article
-
-- type: run_sql
-  args:
-    sql: |
-      drop table author
-
-- type: run_sql
-  args:
-    sql: |
-      drop table test_types
-
-- type: run_sql
-  args:
-    sql: |
-      drop type complex
-
-- type: run_sql
-  args:
-    sql: |
-      drop type inventory_item
+      DROP TABLE person;
+      DROP FUNCTION get_orders(timestamptz);
+      DROP TABLE orders;
+      DROP TABLE article;
+      DROP TABLE author;
+      DROP TABLE test_types;
+      DROP TYPE complex;
+      DROP TYPE inventory_item;
+    cascade: true
