--- a/server/tests-py/queries/graphql_mutation/update/basic/teardown.yaml
+++ b/server/tests-py/queries/graphql_mutation/update/basic/teardown.yaml
@@ -11,14 +11,8 @@ args:
 - type: run_sql
   args:
     sql: |
-      drop table article
+      DROP TABLE article;
+      DROP TABLE author;
+      DROP TABLE person;
+    cascade: true
 
-- type: run_sql
-  args:
-    sql: |
-      drop table author
-
-- type: run_sql
-  args:
-    sql: |
-      drop table person
