--- a/server/tests-py/queries/graphql_mutation/insert/basic/order_col_shipped_null.yaml
+++ b/server/tests-py/queries/graphql_mutation/insert/basic/order_col_shipped_null.yaml
@@ -1,6 +1,16 @@
 - description: Insert into order table with a null value
   url: /v1alpha1/graphql
   status: 200
+  response:
+    data:
+      insert_orders:
+        returning:
+        - id: 4
+        affected_rows: 1
+        query:
+          get_orders:
+          - id: 2
+          - id: 3
   query:
     query: |
       mutation insert_orders{
@@ -16,6 +26,13 @@
             id
           }
           affected_rows
+          query {
+            get_orders(
+            args: {arg_1: "2017-08-16 14:22:11.802755+02"}
+            ){
+              id
+            }
+          }
         }
       }
 - description: Delete the inserted orders
