--- a/server/tests-py/queries/graphql_mutation/insert/permissions/teardown.yaml
+++ b/server/tests-py/queries/graphql_mutation/insert/permissions/teardown.yaml
@@ -11,24 +11,9 @@ args:
 - type: run_sql
   args:
     sql: |
-      drop table address
-
-- type: run_sql
-  args:
-    sql: |
-      drop table resident
-
-- type: run_sql
-  args:
-    sql: |
-      drop table article
-
-- type: run_sql
-  args:
-    sql: |
-      drop table author
-
-- type: run_sql
-  args:
-    sql: |
-      drop table "Company"
+      DROP TABLE address;
+      DROP TABLE resident;
+      DROP TABLE article;
+      DROP TABLE author;
+      DROP TABLE "Company";
+    cascade: true
