--- a/server/Makefile
+++ b/server/Makefile
@@ -3,7 +3,7 @@ registry := hasura
 version  := $(shell ../scripts/get-version.sh)
 
 # TODO: needs to be replaced with something like yq
-stack_resolver := $(shell grep '^resolver:' stack.yaml | awk '{print $$2;}')
+stack_resolver := $(shell awk '/^resolver:/ {print $$2;}' stack.yaml)
 packager_ver := 1.2
 project_dir := $(shell pwd)
 build_dir := $(project_dir)/$(shell stack path --dist-dir)/build
