update readme, add examples

--- a/community/tools/graphql2chartjs/example/package.json
+++ b/community/tools/graphql2chartjs/example/package.json
@@ -7,8 +7,7 @@
     "apollo-link-ws": "^1.0.14",
     "chart.js": "^2.7.3",
     "graphql": "^14.1.1",
-    "inflection": "^1.12.0",
-    "moment": "^2.24.0",
+    "graphql2chartjs": "^0.0.1",
     "react": "^16.8.1",
     "react-apollo": "^2.4.1",
     "react-chartjs-2": "^2.7.4",
