--- a/community/tools/graphql2chartjs/package.json
+++ b/community/tools/graphql2chartjs/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "./node_modules/.bin/babel src --out-dir lib"
   },
-  "author": "",
+  "author": "Hasura",
+  "repository": "hasura/graphql-engine",
   "license": "ISC",
   "dependencies": {
     "@babel/polyfill": "^7.2.5",
