--- a/server/stack.yaml
+++ b/server/stack.yaml
@@ -16,8 +16,8 @@ packages:
 # Packages to be pulled from upstream that are not in the resolver (e.g., acme-missiles-0.3)
 extra-deps:
 # use https URLs so that build systems can clone these repos
-- git: https://github.com/hasura/pg-client-hs.git
-  commit: f3d1e9e67bdfbfa3de85b7cbdb4c557dce7fd84d
+- git: https://github.com/nizar-m/pg-client-hs.git
+  commit: b9bf15a4bf3f61eaaff36f00cde68e4a0ac9b192
 - git: https://github.com/hasura/graphql-parser-hs.git
   commit: ff95d9a96aa5ef9e5390f8712958e4118e3831f6
 - ginger-0.8.1.0
