--- a/server/stack.yaml
+++ b/server/stack.yaml
@@ -16,8 +16,8 @@ packages:
 # Packages to be pulled from upstream that are not in the resolver (e.g., acme-missiles-0.3)
 extra-deps:
 # use https URLs so that build systems can clone these repos
-- git: https://github.com/hasura/pg-client-hs.git
-  commit: 2d0e9f4c4ff0ba26bf4925db241d92b5f58621c3
+- git: https://github.com/rakeshkky/pg-client-hs.git
+  commit: bdeb884279100d0417bb697e0e05017cc7c320df
 - git: https://github.com/hasura/graphql-parser-hs.git
   commit: ff95d9a96aa5ef9e5390f8712958e4118e3831f6
 - ginger-0.8.1.0
